Pacco/compose/pod-infra.yml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    name: redis
spec:

  volumes:
  - name: redis-data
    emptyDir: {}

  containers:

  - name: redis
    image: redis
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 6379
    volumeMounts:
    - name: redis-data
      mountPath: /redis/data

---

apiVersion: v1
kind: Pod
metadata:
  name: mongo-pod
  labels:
    name: mongo
spec:

  volumes:
  - name: mongo-data
    emptyDir: {}

  containers:

  - name: mongo
    image: mongo
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 27017
    volumeMounts:
    - name: mongo-data
      mountPath: /mongo/data

---

apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq-pod
  labels:
    name: rabbitmq
spec:
  containers:

  - name: rabbitmq
    image: rabbitmq
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 6379
    - containerPort: 5672
    - containerPort: 15672
    - containerPort: 15692

  restartPolicy: Always
  volumes: null
