Pacco/compose/service-infra.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
    selector:
      name: redis
    ports:
    - port: 6379
      targetPort: 6379
   
---
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
    selector:
      name: mongo
    ports:
    - port: 27017
      targetPort: 27017
   
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
    selector:
      name: rabbitmq
    type: NodePort
    ports:
    - port: 15672
      targetPort: 15672
